oops i dont need this commt

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <p class="hello">Hello world!</p>
     <p>It's time to learn JavaScript</p>
+    <p>asdsada</p>
     <script src="./script.js"></script>
 </body>
 </html>
