--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p class="hello">Hello world!</p>
-    <p>It's time to learn JavaScript</p>
+    <p class="js">It's time to learn JavaScript</p>
     <script src="./script.js"></script>
 </body>
 </html>
