--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,20 @@
     <link rel="stylesheet" href="./index.css">
     <title>UdemyJS</title>
 </head>
+
 <body>
-    <p class="hello">Hello world!</p>
-    <p class="js">It's time to learn JavaScript</p>
+    <div class="container">
+        <div class="main">
+            <p class="hello">Hello world!</p>
+            <p class="js">It's time to learn JavaScript</p>
+        </div>
+        <footer class="footer">
+            <div class="footer__text">
+                Directed by PMS original .(c) PMS 2013-2023
+            </div>
+        </footer>
+    </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
