--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="main">
             <p class="hello">Hello world!</p>
             <p class="js">It's time to learn JavaScript</p>
+            <button class="main__btn">CLICK!</button>
         </div>
         <footer class="footer">
             <div class="footer__text">
