--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
 <body>
     <div class="container">
+        <header class="header">
+            <div class="header__logo">LOGO</div>
+            <nav class="header__navbar">
+                <ul class="header__navbar-list">
+                    <li class="header__navbar-item">Main</li>
+                    <li class="header__navbar-item">Contacts</li>
+                    <li class="header__navbar-item">About</li>
+                    <li class="header__navbar-item">Theme ☀︎</li>
+                </ul>
+            </nav>
+        </header>
         <div class="main">
             <p class="hello">Hello world!</p>
             <p class="js">It's time to learn JavaScript</p>
