--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="header__logo">LOGO</div>
             <nav class="header__navbar">
                 <ul class="header__navbar-list">
-                    <li class="header__navbar-item">Main</li>
-                    <li class="header__navbar-item">Contacts</li>
-                    <li class="header__navbar-item">About</li>
-                    <li class="header__navbar-item">Theme ☀︎</li>
+                    <button class="header__navbar-item">Main</button>
+                    <button class="header__navbar-item">Contacts</button>
+                    <button class="header__navbar-item">About</button>
+                    <button class="header__navbar-item">Theme ☀︎</button>
                 </ul>
             </nav>
         </header>
@@ -26,6 +26,8 @@
             <p class="hello">Hello world!</p>
             <p class="js">It's time to learn JavaScript</p>
             <button class="main__btn">CLICK!</button>
+            <!-- <iframe width="600" height="400" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
+            </iframe> -->
         </div>
         <footer class="footer">
             <div class="footer__text">
