getting data and render users

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
         <div class="main">
             <p class="hello">Hello world!</p>
             <p class="js">It's time to learn JavaScript</p>
-            <div class="main__block"></div>
+            <!-- <div class="main__block"></div>
             <div class="main__circle"></div>
-            <div class="main__promise_block"></div>
-            <button class="main__btn">CLICK!</button>
+            <div class="main__promise_block"></div> -->
+            <!-- <div class="main__user"></div> -->
+            <!-- <button class="main__btn">CLICK!</button> -->
             <!-- <iframe width="600" height="400" src="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1">
             </iframe> -->
         </div>
