header logo svg and styled users

--- a/index.html
+++ b/index.html
@@ -12,7 +12,39 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="header__logo">LOGO</div>
+            <div class="header__logo">
+                <div class="header__logo-pic">
+                    <?xml version="1.0" encoding="iso-8859-1"?>
+                    <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+                    <svg fill="#000000" height="" width="" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                        xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 414.829 414.829" xml:space="preserve">
+                        <g>
+                            <g id="Layer_1_63_">
+                                <g>
+                                    <path d="M386.164,197.249c0.071-0.072,0.145-0.146,0.215-0.218l0,0c16.003-16.389,29.498-32.625,28.386-53.322
+				c-0.965-17.945-12.876-35.564-37.486-55.447c-0.107-0.086-0.214-0.17-0.323-0.254c-24.293-18.551-108.225-78.824-168.11-75.584
+				c-22.977,1.244-58.462,35.723-72.652,50.49c-31.11,32.373-56.657,69.818-70.09,102.732
+				C48.242,209.414,3.717,265.564,3.27,266.125c-5.163,6.479-4.097,15.916,2.382,21.08c2.762,2.201,6.062,3.27,9.339,3.27
+				c4.409,0,8.779-1.936,11.74-5.652c0.551-0.691,4.65-5.857,10.679-13.99l132.933,77.781l-27.596,28.479
+				c-5.765,5.949-5.616,15.445,0.333,21.211c2.914,2.822,6.677,4.227,10.437,4.227c3.917,0,7.832-1.525,10.773-4.561l73.856-76.217
+				c11.036-0.689,35.775-2.543,62.372-6.578c67.931-10.311,85.641-25.25,93.053-35.592c5.646-7.877,7.313-17.221,4.693-26.307
+				C389.188,221.788,386.335,197.83,386.164,197.249z M191.837,326.434L54.834,246.27c6.039-8.91,12.43-18.805,18.508-29.061
+				l142.462,84.49L191.837,326.434z M255.439,290.328L87.665,190.824c2.268-4.664,4.36-9.297,6.215-13.842
+				c2.856-7,6.358-14.26,10.41-21.66l90.036,29.508l70.647,104.58C261.629,289.752,258.433,290.059,255.439,290.328z
+				 M300.985,284.734c-0.895,0.145-1.788,0.285-2.681,0.424l-57.482-85.09l79.117,25.928l-1.804,2.25
+				c-5.183,6.463-4.145,15.904,2.318,21.086c6.462,5.182,15.903,4.145,21.086-2.318l10.688-13.328
+				c0.029-0.037,0.057-0.072,0.086-0.107c2.502-3.18,5.064-6.211,7.656-9.152c1.849,8.854,4.787,20.92,9.469,37.16
+				c0.008,0.029,0.016,0.055,0.021,0.078C368.679,263.025,360.059,275.185,300.985,284.734z M358.229,182.824
+				c-5.591,5.609-11.635,11.68-17.704,18.35l-219.942-72.08c9.503-13.721,20.523-27.438,32.577-40.443l224.261,73.496
+				C372.511,168.496,365.629,175.402,358.229,182.824z M177.266,64.98c17.636-15.555,29.663-22.072,33.292-22.604
+				c39.458-2.109,104.344,36.023,148.026,69.35c8.658,7.008,15.181,13.381,19.566,19.088L177.266,64.98z" />
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
+                </div>
+                <div class="header__logo-text">PMS Original</div>
+            </div>
             <nav class="header__navbar">
                 <ul class="header__navbar-list">
                     <button class="header__navbar-item">Main</button>
