--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <button class="header__navbar-item">Main</button>
                     <button class="header__navbar-item">Contacts</button>
                     <button class="header__navbar-item">About</button>
-                    <button class="header__navbar-item">Theme ☀︎</button>
+                    <button class="header__navbar-item">☀︎</button>
                 </ul>
             </nav>
         </header>
